--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "babel-runtime": "^5.8.0",
     "fastclick": "^1.0.6",
-    "vue": "^1.0.18"
+    "vue": "^1.0.18",
+    "vue-resource": "^0.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
